--- a/act1-configurar-main/index.html
+++ b/act1-configurar-main/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>¿Cuál es tu nombre?</h1>
-    <h2>Mi nombre es Enrique Alexandre Kattz Villa</h2> 
+    <h2>Mi nombre es Enrique Alexandre Kattz Villa!</h2> 
     <h1>Mis serie favorita es:</h1>
 
     
